--- a/_rating.html
+++ b/_rating.html
@@ -19,13 +19,13 @@
                     <span id="rating-4" class="glyphicon glyphicon-star"></span>
                     <span id="rating-5" class="glyphicon glyphicon-star"></span>
                 </div>
-                <button id="rate-user" type="button" class="btn-block btn-lg btn-primary">
+                <button id="rate-user" type="button" class="btn-block btn-lg btn-warning">
                     Rate!
                 </button>
-                <button id="rate-skip" type="button" class="btn-block btn-lg btn-primary">
+                <button id="rate-skip" type="button" class="btn-block btn-lg btn-warning">
                     Skip
                 </button>
-                <button id="simulate-load-user" type="button" class="btn-block btn-lg btn-primary">
+                <button id="simulate-load-user" type="button" class="btn-block btn-lg btn-warning">
                     Simulate loading actual user
                 </button>
 
