--- a/_login.html
+++ b/_login.html
@@ -9,7 +9,7 @@
             <div class="checkbox">
                 <input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe"> Remember me
             </div>
-            <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
+            <button class="btn btn-lg btn-warning btn-block" type="submit">Login</button>
         </div>
     </div>
 </div>
