--- a/_signUp.html
+++ b/_signUp.html
@@ -7,7 +7,7 @@
         <input type="text" class="form-control" name="Email" placeholder="User Email" required="" autofocus=""/>
         <input type="text" class="form-control" name="username" placeholder="User Name" required="" autofocus=""/>
         <input type="password" class="form-control" name="password" placeholder="Password" required=""/>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign-Up</button>
+        <button class="btn btn-lg btn-warning btn-block" type="submit">Sign-Up</button>
         </div>
     </div>
 </div>
