--- a/_tickets.html
+++ b/_tickets.html
@@ -1,23 +1,25 @@
 
 <body>
 <div id="tickets">
-<h1>Avaliable Tickets</h1>
-<div class="container-fluid">
-    <ul id="buttons">
-        <li>
-            <button id = "R" class="btn-warning">Ralph's</button>
-        </li>
-        <li>
-            <button id = "T" class="btn-warning">TJ's</button>
-        </li>
-        <li>
-            <button id = "W" class="btn-warning">WholeFood</button>
-        </li>
-        <li>
-            <button id = "V" class="btn-warning">Vons</button>
-        </li>
-    </ul>
-</div>
+    <div class="row">
+        <div class="col-xs-12">
+        <h1>Avaliable Tickets</h1>
+            <div class="container-fluid">
+                <ul id="buttons">
+                    <li>
+                        <button id = "R" class="btn-warning">Ralph's</button>
+                    </li>
+                    <li>
+                        <button id = "T" class="btn-warning">TJ's</button>
+                    </li>
+                    <li>
+                        <button id = "W" class="btn-warning">WholeFood</button>
+                    </li>
+                    <li>
+                        <button id = "V" class="btn-warning">Vons</button>
+                    </li>
+                </ul>
+            </div>
     <div class="col-xs-12">
     <ul id="thisone">
 
