--- a/_login.html
+++ b/_login.html
@@ -4,16 +4,48 @@
     <div class="row text-center">
         <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-lg-4 col-md-offset-3 col-lg-offset-4">
             <h2 class="form-signin-heading">Fetch Login</h2>
-            <input type="text" class="form-control" name="username" placeholder="User Name" required="" autofocus=""/>
-            <input type="password" class="form-control" name="password" placeholder="Password" required=""/>
+            <input type="text" class="form-control" id="user-name" name="username" placeholder="User Name"  required="" autofocus=""/>
+            <input type="password" class="form-control" id="pass" name="password" placeholder="Password" required=""/>
             <div class="checkbox">
                 <input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe"> Remember me
             </div>
-            <button class="btn btn-lg btn-warning btn-block" type="submit">Login</button>
+            <button class="btn btn-lg btn-warning btn-block" id="login" type="submit">Login</button>
         </div>
     </div>
 </div>
+<script>
+    $('#login').click(function () {
 
+            sendToServer();
+
+    });
+
+    function sendToServer(){
+        var info_to_send = {};
+        info_to_send.name = $('#user-name').val();
+        info_to_send.passWord = $('#pass').val();
+        info_to_send.type = "get";
+
+        //Simulation (alert or console.log to check for yourself)
+        alert(JSON.stringify(info_to_send));
+
+        //Actual
+        $.ajax({
+            type: "POST",
+            url: "/_login",
+            data: info_to_send,
+            success: function(data){
+                //data is the object sent back on success (could also just be string)
+                alert("Congrats!");
+            },
+            fail: function(data){
+                alert("fail");
+                //data is the object send back on fail (could also just be string)
+            }
+        });
+    }
+
+</script>
 
 </body>
 
