Simplfied some pages

--- a/_shopping.html
+++ b/_shopping.html
@@ -1,50 +1,23 @@
 <body>
-<div class="container" id="shopping">
-    <!--  <div class="row">
-          <div class="col-xs-12">
-              <h1>Shopping List</h1>
-              <form name="form">
-                  <input class="input" type="text" name="checkListItem" placeholder="What do you need?"
-                         autocomplete="off"
-                         autofocus/>
-              </form>
-              <div id="list">
-              </div>
-              <div id="item"></div>
-              <button type="button" class="btn btn-link" id="sub" data-toggle="modal"
-                      data-target="#myModal">
-                  Submit
-              </button>
-          </div>
-      </div> -->
-    <div class="col-xs-12">
-        <br>
-        <h1>Shopping List</h1>
-        <div id="box">
-            <div id="list">
-                <form name="form">
-                <span><input class="input" type="text" name="checkListItem" placeholder="Items?"
-                             autocomplete="off"
-                             autofocus/></span>
-                </form>
-            </div>
-            <div class="todo-footer">
-                <strong><span class="count-todos"></span></strong>
-                <div id="container">
-                    <div id="item"></div>
-                    <div id="sub-div">
-                        <button type="button" class="btn btn-link" id="sub" data-toggle="modal" data-target="#myModal">
-                            Submit
-                        </button>
-                    </div>
-                    <div id="placeholder"></div>
-                </div>
+<div class="container text-center" id="shopping">
+    <div class="row">
+        <div class="col-xs-12">
+            <h2>Shopping List</h2>
+            <form id="add-shopping-item">
+                <input class="input" type="text" name="checkListItem" placeholder="Items?" autocomplete="off"
+                       autofocus/>
+            </form>
+            <ul id="list">
+
+            </ul>
+            <div id="container">
+                <div id="item"></div>
+                <button type="button" class="btn btn-link" id="sub" data-toggle="modal" data-target="#myModal">
+                    Submit
+                </button>
             </div>
         </div>
-        <div class="footer2"></div>
-        <div class="footer3"></div>
     </div>
 </div>
-
 <script src="js/_shopping.js"></script>
 </body>
