js for shopping

--- a/_shopping.html
+++ b/_shopping.html
@@ -12,7 +12,7 @@
             </ul>
             <div id="container">
                 <div id="item"></div>
-                <button type="button" class="btn btn-link" id="sub" data-toggle="modal" data-target="#myModal">
+                <button id="submit_list" type="button" class="btn btn-link" id="sub" data-toggle="modal" data-target="#myModal">
                     Submit
                 </button>
             </div>
@@ -21,3 +21,10 @@
 </div>
 <script src="js/_shopping.js"></script>
 </body>
+
+<script>
+
+
+
+</script>
+
