--- a/template.html
+++ b/template.html
@@ -53,10 +53,10 @@
                         class="glyphicon glyphicon-cog"></span>Setting
                 </div>
                 <div data-link='/_login.html' class="log"><span
-                        class="glyphicon glyphicon-log-in"></span>Loging
+                        class="glyphicon glyphicon-log-in"></span>Login
                 </div>
                 <div data-link='/_signUp.html' class="sign"><span
-                        class="glyphicon glyphicon-off"></span>Sign-Up
+                        class="glyphicon glyphicon-plus-sign"></span>Sign-Up
                 </div>
                 <div data-link='/_passwordRecovery.html' class="sign"><span
                         class="glyphicon glyphicon-wrench"></span>Password Recovery
@@ -75,6 +75,9 @@
                 </div>
                 <div data-link='/_checkout.html' class="sign"><span
                         class="glyphicon glyphicon-check"></span>Checkout
+                </div>
+                <div data-link='/_homePage.html' class="log-out"><span
+                        class="glyphicon glyphicon-off"></span>Log-Out
                 </div>
 
 
