--- a/_driverList.html
+++ b/_driverList.html
@@ -5,7 +5,7 @@
             <h1 class="text-center" id="listName">Gary's Shopping List</h1>
             <h5 class="text-center">Phone: 123-456-7890</h5>
 
-            <ul id="thisone">
+            <ul id="list">
 
             </ul>
             <p id="left" class="text-center"></p>
