added scss page for passwordRecovery.html

--- a/_passwordRecovery.html
+++ b/_passwordRecovery.html
@@ -7,7 +7,7 @@
             <h2>Recover Password</h2>
             <label for="formInput">Enter your email</label>
             <input type="email" class="form-control" id="formInput" placeholder="e-mail">
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary submit_btn">Submit</button>
         </div>
     </div>
 </div>
