--- a/_payment.html
+++ b/_payment.html
@@ -13,8 +13,8 @@
 
         </div>
         <div class="footer " style="text-align: center">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Confirm</button>
-            <a href="/account.html" class="btn btn-default" data-dismiss="modal" role="button">Cancel</a>
+            <button type="button" class="btn btn-default">Confirm</button>
+            <a href="/account.html" class="btn btn-default" role="button">Cancel</a>
         </div>
     </div>
 </div>
