--- a/_passwordReset.html
+++ b/_passwordReset.html
@@ -19,7 +19,7 @@
             <div class="col-xs-2 col-md-2"></div>
         </div>
         <div class="row text-center">
-            <button type="submit" class="btn btn-primary" id="submit">submit</button>
+            <button type="submit" class="btn btn-primary" id="submitPass">submit</button>
         </div>
 
     </div>
